Source/WebKit/UIProcess/Launcher/mac/ProcessLauncherMac.mm
@@ -78,11 +78,6 @@ static bool shouldLeakBoost(const ProcessLauncher::LaunchOptions& launchOptions)
     UNUSED_PARAM(launchOptions);
     return true;
 #else
-#if ENABLE(WEBPROCESS_NSRUNLOOP)
-    // Boost the WebContent process if the NSApplication run loop is not used.
-    if (launchOptions.processType == ProcessLauncher::ProcessType::Web)
-        return true;
-#endif
     // On Mac, leak a boost onto the NetworkProcess.
     return launchOptions.processType == ProcessLauncher::ProcessType::Network;
 #endif
